05_kubernetes/03_Session3_Application_Deployment/021-the-big-picture/manifests/09-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: lab021
spec:
  replicas: 1
  strategy:
    type: Recreate # ป้องกันสอง Pod เขียน PVC เดียวพร้อมกัน
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: k8s-lab-db:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "opsuser", "-d", "skillspace"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 384Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-data
