05_kubernetes/03_Session3_Application_Deployment/021-the-big-picture/manifests/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab021
spec:
  selector: # รวม web Pod ที่พร้อมไว้ใต้ชื่อเดียว
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: http
