05_kubernetes/03_Session3_Application_Deployment/021-the-big-picture/manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillspace
  namespace: lab021
spec:
  ingressClassName: nginx
  rules:
    - http: # ประตูเดียวแยกเส้นทางด้วย path
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
